--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.username=root
+spring.datasource.password=zachary0322
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.resources.static-locations=classpath:/static/
+spring.resources.cache.period=0
